--- a/TestingCodelab/app/build.gradle
+++ b/TestingCodelab/app/build.gradle
@@ -115,7 +115,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-core:$rootProject.espressoVersion"
 
     // Compose testing dependencies
-    androidTestImplementation "androidx.compose.ui:ui-test"
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4"
-    debugImplementation "androidx.compose.ui:ui-test-manifest"
+    androidTestImplementation "androidx.compose.ui:ui-test:1.4.0-alpha02"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.4.0-alpha02"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:1.4.0-alpha02"
 }
